2003-03-19  Damon Chaplin  <damon@gnome.org>

	* apps.html: added a bunch of apps.

2003-02-08  Damon Chaplin  <damon@gnome.org>

	* index.html: 
	* apps.html: changed my email address to damon@gnome.org.

2002-12-02  Damon Chaplin  <damon@gnome.org>

	* glade-2.0.dtd: added to web site, so links from Glade XML files
	point to the DTD.

2002-11-24  Damon Chaplin  <damon@kendo.fsnet.co.uk>

	* apps.html: added glocate2.

	* *.html: updated my email address, and removed old webmaster
	address.

2002-10-28  Damon Chaplin  <damon@ximian.com>

	* index.html: added Yasunari Imado's Japanese translated tutorial.

2002-10-21  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Meld.

2002-10-08  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gjots.

2002-10-07  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Glade 2 betas.

2002-10-06  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Gnopa.

2002-09-25  Damon Chaplin  <damon@ximian.com>

	* download.html: fix link to tarball.

	* apps.html: added gwaferprog, Gwine, Gspoof.

	* download.html: updated last stable version to 0.6.4 and removed
	link to 0.6.2.

2002-08-28  Damon Chaplin  <damon@ximian.com>

	* index.html: added info about French Glade user group & updated docs.

	* apps.html: added Schlange, SIPSet, TiLP & pxesconfig.

2002-07-01  Damon Chaplin  <damon@ximian.com>

	* apps.html: added OggDoctor and Xsox.

2002-05-21  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Bond.

2002-05-20  Damon Chaplin  <damon@ximian.com>

	* apps.html: added GnomeLDAP.

2002-05-01  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Ishan's Glade port.

	* apps.html: updated xcave link. Oops, forgot to commit before.

2002-04-02  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Knocker.

2002-03-27  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Stoq and GnomeRSVP.

2002-03-18  Damon Chaplin  <damon@ximian.com>

	* apps.html: updated gdcalc.
