@@ -87,7 +87,7 @@ Applications</a></b></font></td></tr></table></center>
 <center><hr></center>
 <font face="Arial,helvetica,geneva,sans-serif,lucida">
 <p>
-<font size=+1><b>Last Stable Version: 0.6.4</b></font><br>
+<font size=+1><b>Last Stable Version: 2.0.0</b></font><br>
 Versions newer than this may have problems, so use at your own risk!<br>
 
 <P>
@@ -110,20 +110,16 @@ set to 'Glade'.
 <td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 <ul>
-<li><a href="ftp://ftp.gnome.org/pub/GNOME/sources/glade/0.6/glade-0.6.4.tar.gz">Glade 0.6.4 Tarball</a> (2.6 MB)<BR>
+
+<li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">Glade 2.0.0 Tarball</a> (2.7 MB)<BR>
 <p>
-Note: You will need <a href="links.html#automake">automake 1.4</a>
-and <a href="links.html#autoconf">autoconf 2.13</a> to build generated code.
+This version of Glade is for GTK+ 2.x and GNOME 2.x.
+
+<li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/0.6/">Glade 0.6.4 Tarball</a> (2.6 MB)<BR>
 <p>
-Note: You need a recent version of gnome-libs (>=1.0.50), if you want Gnome
-support.<br>
-Or use './configure --disable-gnome' to build Glade without Gnome support.
+This version of Glade is for the older GTK+ 1.2 and GNOME 1.4 platform.
 </li>
 
-<li><a href="ftp://ftp.gnome.org/pub/GNOME/sources/glade/1.1/glade-1.1.3.tar.gz">Glade 1.1.3 Tarball</a> (2.5 MB)<BR>
-<p>
-This is the latest beta release supporting GTK+ 2 and GNOME 2.
-It is fully-working now, and has few known bugs.
 </ul></b></font>
 </td>
 <tr>
