@@ -99,6 +99,55 @@ Applications</a></b></font></td></tr></table></center>
 <ul type="square">
 
 
+<li><b>Version 2.0.0 (Apr 11 2003)</b>
+<ul>
+<li>Hide GNOME widgets and stock items in GTK+ projects.
+<li>Made stock icon code more robust, hopefully fixing bug #105694.
+<li>Updated for newer GnomeDB.
+<li>Updated example text editor application for GTK+ 2.
+<li>Bug fixes, including a few crashers.
+</ul>
+</li><br>
+
+
+<li><b>Version 1.1.3 (Nov 2 2002)</b>
+<ul>
+<li>The widget tree now has icons & popup menus again.
+<li>Removed dependancy on gnome-common for generated apps.
+<li>Stopped generating any deprecated code.
+<li>Updated GnomeDB support.
+<li>Updated the generated signal callback argument names.
+<li>A few keynav improvements, including global accelerators like Ctrl+S.
+<li>Disabled support for typing in labels while hovering over widgets, as
+   it is a bit too error-prone.
+<li>Added 'New' button back to toolbar in GNOME version!
+<li>A few bug fixes.
+</ul>
+</li><br>
+
+
+<li><b>Version 1.1.2 (Sep 16 2002)</b>
+<ul>
+<li>Bug fixes.
+</ul>
+</li><br>
+
+
+<li><b>Version 1.1.1 (Jul 15 2002)</b>
+<ul>
+<li>Bug fixes.
+</ul>
+</li><br>
+
+
+<li><b>Version 1.1.0 (May 17 2002)</b>
+<ul>
+<li>First beta release of GTK+ 2 / GNOME 2 port of Glade.
+</ul>
+</li><br>
+
+
+
 <li><b>Version 0.6.4 (Feb 1 2002)</b>
 <ul>
 <li>Fixed some docs installation problems. (Eric Dorland & Damon)
