@@ -167,6 +167,24 @@ Oct&nbsp;1&nbsp;2002
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Apr&nbsp;20&nbsp;2003
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade 2.0.0 released !</B>
+<P>
+Although the Glade 1.1.x series has been fairly stable for quite a while,
+I've finally bumped the version number to 2.0.0.
+<p>
+Get it at <a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">
+http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/</a>.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Oct&nbsp;28&nbsp;2002
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
