@@ -1,3 +1,9 @@
+2003-04-20  Damon Chaplin  <damon@gnome.org>
+
+	* index.html: 
+	* history.html: 
+	* download.html: updated for 2.0.0 release.
+
 2003-03-19  Damon Chaplin  <damon@gnome.org>
 
 	* apps.html: added a bunch of apps.
